@@ -4,6 +4,7 @@
 - Fixed export problem for date range.
 - Fixed export problem for additional fields with html entites in name.
 - Fixed a problem with booking, when site is on HTTP but admin force HTTPS usage.
+- Fixed a integration problem with MarketPress plugin.
 
 2018-xx-xx - 2.2.6
 -------------------------------
